--- a/dev/styles/partials/_side-nav.scss
+++ b/dev/styles/partials/_side-nav.scss
@@ -11,11 +11,13 @@
     height: 100vh;
     overflow: scroll;
     top: 0;
-    left: -490px;
+    left: -480px;
     // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.4s ease-in-out;
     @media (max-width: 780px) {
+        left: -240px;
         width: 240px;
+        transition: all 0.4s ease-in-out;
     }
     &.open {
         left: 0;
