--- a/dev/styles/partials/_site-page.scss
+++ b/dev/styles/partials/_site-page.scss
@@ -1,7 +1,7 @@
 .site-page {
-    -moz-animation: fadein 0.8s; /* Firefox */
-    -webkit-animation: fadein 0.8s; /* Safari and Chrome */
-    -o-animation: fadein 0.8s; /* Opera */
+    -moz-animation: fadein 0.8s ease-in-out; /* Firefox */
+    -webkit-animation: fadein 0.8s ease-in-out; /* Safari and Chrome */
+    -o-animation: fadein 0.8s ease-in-out; /* Opera */
 
     @keyframes fadein {
         from {
